--- a/src/components/SummaryDashboard.css
+++ b/src/components/SummaryDashboard.css
@@ -10,6 +10,12 @@
 }
 .summary-dashboard > * + * {
 
-    margin-left: 10px;
+    margin-left: 40px;
     
+}
+h3 {
+
+    margin-top: 2em;
+    line-height: 1em;
+    margin-bottom: 1em;
 }
