--- a/src/components/team/Summary.css
+++ b/src/components/team/Summary.css
@@ -56,14 +56,13 @@
 .team-summary .graph .streaks .visual-sizer {
 
     width: 200px;
-    padding: 2px 10px;
 
 }
 .team-summary .graph .streaks .visual-sizer span.up {
     
-    background: linear-gradient(to right, transparent, #33AA33);
+    background: linear-gradient(to right, transparent, red);
     display: inline-block;
-    height: 1em;
+    height: 3px;
 
 }
 .team-summary .graph table {
@@ -74,8 +73,7 @@
 .team-summary .graph td {
 
     line-height: 2em;
-    border: solid 1px #DDD;
-    padding: 5px 10px;
+    padding: 5px 5px;
     
 }
 .team-summary .graph .tooltip {
