--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,8 @@
+.experimenz-ots {
+
+    margin: 0 10px;
+    
+}
 .experimenz-ots.error-state input:checked + label + .detail {
 
     max-height: 500px;
