--- a/src/components/KioskControl.css
+++ b/src/components/KioskControl.css
@@ -7,20 +7,29 @@
     left: 0;
     background-color: white;
     padding: 10px;
+    z-index: 10;
 
 }
 .experimenz-ots .kiosk-control {
 
-    flex-basis: auto;
-    min-width: 0;
-    flex: 0;
-    display: block;
-    margin-left: 0;
+    margin: 40px;
 
 }
-.experimenz-ots .kiosk a:not(.kiosk-control) {
+.experimenz-ots .kiosk .kiosk-control  {
+
+    position: fixed;
+    top: 10px;
+    right: 10px;
+
+}
+.experimenz-ots .kiosk .btn {
 
     display: none;
+
+}
+.experimenz-ots .kiosk .kiosk-control .btn {
+
+    display: inline-flex;
 
 }
 .experimenz-ots .kiosk-control svg {
