--- a/src/components/Material.css
+++ b/src/components/Material.css
@@ -2,6 +2,7 @@
 
     max-height: 1em;
     max-width: 1em;
+    width: 1em;
     stroke: white;
     fill: white;
     
@@ -11,4 +12,17 @@
     stroke: silver;
     fill: silver;
     
+}
+.experimenz-ots h1 {
+
+    position: relative;
+
+}
+.experimenz-ots h1 .btn {
+
+    margin: 0;
+    right: 0;
+    top: -0.4em;
+    position: absolute;
+
 }
