--- a/src/components/PendingChanges.css
+++ b/src/components/PendingChanges.css
@@ -3,7 +3,18 @@
     list-style: none;
     background-color: #EEE;
     border-radius: 5px;
-    padding: 5px;
+    padding: 15px;
+
+}
+.experimenz-ots .pending-changes h3 {
+
+    margin: 0;
+    line-height: 2;
+
+}
+.experimenz-ots .pending-changes ul {
+
+    margin: 10px 0;
 
 }
 .experimenz-ots .pending-changes li {
@@ -33,6 +44,6 @@
 }
 .experimenz-ots .pending-changes .btn {
 
-    right: 0;
-
+    margin: 0;
+    
 }
