--- a/src/components/TeamUpdate.css
+++ b/src/components/TeamUpdate.css
@@ -26,9 +26,19 @@
     display: none;
 
 }
+.experimenz-ots .team-update .chosen .choice-content .cancel {
+
+    display: block;
+
+}
 .experimenz-ots .team-update .choice-content:hover {
 
     background-color: #EEE;
+
+}
+.experimenz-ots .team-update .chosen .choice-content:hover {
+
+    background-color: transparent;
 
 }
 .experimenz-ots .team-update .choice-content > * {
@@ -212,11 +222,42 @@
 }
 .experimenz-ots .team-update .pending-events .pending-changes {
 
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s;
 
 }
 .experimenz-ots .team-update .pending-events-populated .pending-changes {
 
-    display: block;
+    max-height: 1000px;
+    opacity: 1;
+
+}
+.experimenz-ots .team-update input {
+
+    border: none;
+    border-bottom: solid 1px black;
+    margin: 5px 10px 10px 10px;
+    font-size: 1.5em;
+
+}
+.experimenz-ots .team-update {
+
+    position: relative;
+
+}
+.experimenz-ots .team-update-saving {
+
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba( 255, 255, 255, 0.8 );
+    font-size: 3em;
+    text-align: center;
+    padding: 50px;
 
 }
