--- a/src/components/impact/Summary.css
+++ b/src/components/impact/Summary.css
@@ -1,23 +1,75 @@
-.impact-summary h1 {
+.experimenz-ots .impact-summary h1 {
 
     position: relative;
 
 }
-.impact-summary .under-construction {
+.experimenz-ots .impact-summary {
 
-    padding: 40px;
-    text-align: center;
-    border: black 1px dashed;
-    border-radius: 10px;
-    margin: 10px 0;
-    min-height: 500px;
-    opacity: 0.2;
+    margin-right: 10px;
 
 }
-.impact-summary .under-construction svg {
+.experimenz-ots .impact-summary table,
+.experimenz-ots .impact-summary .impact-progress {
 
-    max-height: 100px;
-    margin: 10px 0;
-    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+
+}
+
+.experimenz-ots .impact-summary td {
+
+    padding: 10px;
+    font-size: 1.20em;
+
+}
+
+.led-box {
+
+    height: 24px;
+    margin: 0 10px 0 0;
+    transform: scale(0.75);
+
+}
+
+.led-red {
+
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    background-color: #F00;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
+    animation: blinkRed 2s infinite;
+
+}
+
+@keyframes blinkRed {
+
+    from { background-color: #F00; }
+    50% { background-color: #A00; box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 0;}
+    to { background-color: #F00; }
+
+}
+
+.led-green {
+
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    background-color: #ABFF00;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
+
+}
+.led-off {
+
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    background-color: #CCC;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 3px 1px, inset #555 0 -1px 9px;
 
 }
